:bug: consertando o z-index do spinner

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -594,7 +594,6 @@ body.light-theme {
   padding: 2rem 1rem;
   place-items: center;
 
-  z-index: var(--z-modal);
   visibility: hidden;
   opacity: 0;
   transition: .4s;
@@ -661,6 +660,7 @@ body.light-theme {
 .active-modal {
   opacity: 1;
   visibility: visible;
+  z-index: var(--z-modal);
 }
 
 /*=============== WORK ===============*/
@@ -918,9 +918,9 @@ body.light-theme {
 
 .spinner_loading {
   display: inline-block;
+  overflow: hidden;
 
   opacity: 0;
-  visibility: hidden;
 
   width: 100%;
   height: 100%;
@@ -928,10 +928,10 @@ body.light-theme {
   transform: translateZ(0) scale(1);
   backface-visibility: hidden;
   transform-origin: 0 0;
-
+  z-index: -10;
   position: fixed;
   inset: 0;
-  background-color: hsla(219, 28%, 16%, .7);
+  background-color: hsla(var(--second-hue), 28%, 16%, .7);
 
   transition: .4s;
 }
@@ -943,7 +943,7 @@ body.light-theme {
   width: 30px;
   height: 30px;
 
-  border: 5px solid #A395E9;
+  border: 5px solid var(--first-color);
   border-top-color: transparent;
   border-radius: 50%;
 
@@ -962,6 +962,7 @@ body.light-theme {
 .active-loading {
   opacity: 1;
   visibility: visible;
+  z-index: var(--z-modal);
 }
 
 /*=============== BREAKPOINTS ===============*/
